@@ -1,3 +1,4 @@
+.\" RCSid $Id$
 .TH NORMTIFF 1 2/25/99 RADIANCE
 .SH NAME
 normtiff - tone-map and convert RADIANCE picture or HDR TIFF to standard TIFF
